--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
         <a href="verification.html"><button class="login-button">Login</button></a>
         
         <div class="login-footer">
-            <p>Need help? <a href="askus@infosys.com">Contact support</a></p>
-            <p style="margin-top: 5px;">&copy; 2025 Infosys Employee Verification System</p>
+            <p>Need help? <a href="askus@bizllence.com">Contact support</a></p>
+            <p style="margin-top: 5 px;">&copy; 2025 bizllence Employee Verification System</p>
         </div>
     </div>
 </body>
