--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <a href="verification.html"><button class="login-button">Login</button></a>
         
         <div class="login-footer">
-            <p>Need help? <a href="askus@bizllence.com">Contact support</a></p>
+            <p>Need help? <a href="https://www.bizllence.com/contact-us">Contact support</a></p>
             <p style="margin-top: 5 px;">&copy; 2025 bizllence Employee Verification System</p>
         </div>
     </div>
