--- a/verification.html
+++ b/verification.html
@@ -416,8 +416,8 @@
         </div>
 
         <div class="footer">
-            <p>infosis Corporation &copy; 2025 | Employee Verification System</p>
-            <p>Need help? Contact HR at neilpatel@infosys.com</p>
+            <p>bizllence Corporation &copy; 2025 | Employee Verification System</p>
+            <p>Need help? Contact HR at neilpatel@bizllence.com</p>
         </div>
     </div>
 
